# GroceryListAi

./: .env.example  .gitignore  README.md  build-web-linux.sh  build-web-windows.bat  docker-compose.yml
Server/: .coverage  .dockerignore  .env.example  .gitignore  DATABASE_USAGE.md  Dockerfile  README.md  TESTING.md  api.py  api_old.py  conftest.py  env.sample  llm.py  main.py  pyproject.toml  run_tests.py
Server/Models/: __init__.py  database.py  item.py  schemas.py
Server/tests/: __init__.py  test_chat_api.py  test_items_api.py  test_llm.py  test_logger.py  test_models.py  test_schemas.py  test_service_manager.py
Web/: .dockerignore  .env.example  API_CONTRACT.md  Dockerfile  api.ts  docker-entrypoint.sh  package-lock.json  package.json  vite.config.ts
Web/src/: App.css  App.tsx  config.ts  index.css  vite-env.d.ts
Web/src/Pages/Home/: index.tsx  styles.css
Web/src/Pages/Settings/: index.tsx  styles.css
Web/src/Pages/Tests/: index.tsx  styles.css
Web/src/components/: icons.tsx
Web/src/components/Chat/: index.tsx  style.css
Web/src/components/Footer/: index.tsx  style.css
Web/src/components/Sidebar/: index.tsx  style.css
Web/src/components/TodoList/: index.tsx  style.css
Web/src/components/VoiceButton/: index.tsx  style.css
Web/src/contexts/: ThemeContext.tsx
Web/src/utils/: language.ts
docs/: DOCKER.md  DOCKER_QUICKSTART.md
docs/reports/: TESTS.md  TEST_ANALYSIS_RESULTS.md  TEST_COVERAGE_IMPROVEMENT.md
prototype/: README.md  index.html  settings.html  styles.css
