[project]
name = "grocery-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "ollama>=0.6.0",
    "openai>=2.2.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
packages = ["Models"]
